traefik/traefik-daemonset.yaml

apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: traefik
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      containers:
        - name: traefik
          image: traefik:v2.10
          args:
            - "--api.dashboard=true"
            - "--providers.kubernetescrd"
            - "--providers.kubernetesIngress"
            - "--entrypoints.web.address=:80"
            - "--entrypoints.websecure.address=:443"
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
            - name: admin
              containerPort: 8080
